Starting to build out the special case of a client running in the background, in the process Queuebert will now support communication between two tabs.

--- a/example/background.html
+++ b/example/background.html
@@ -5,6 +5,17 @@
 		<script src="../lib/client.js"></script>
 		<script type="text/javascript">
 			var server = new Queuebert.Server();
+			
+			var delegate = {
+				receivedMessage: function(clientId, body) {
+					console.log(body.message);
+				}
+			};
+
+			var client = new Queuebert.Client({
+				identifier: 'background',
+				delegate: delegate
+			});
 		</script>
 	</head>
 	<body>
